# TechCorpFAQ

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: mock_kb.json
src/: main.py
src/adapters/inbound/http/: router.py  schemas.py
src/adapters/outbound/embedding/: openrouter.py
src/adapters/outbound/knowledge_base/: json_file.py
src/adapters/outbound/llm/: observability.py  openai.py
src/adapters/outbound/vector_store/: numpy_in_memory.py
src/domain/: __init__.py  models.py
src/domain/ports/: __init__.py  embedding.py  knowledge_base.py  llm.py  vector_store.py
src/domain/services/: __init__.py  rag_service.py
src/infrastructure/: config.py  container.py
tests/: test_ask_endpoint.py  test_numpy_vector_store.py  test_rag_service.py
